--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "test",
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "start": "node .",
-    "build": "tsc"
+    "test": "test"
   },
   "author": "Sophie Zeissler",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -20,7 +20,8 @@
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.25.3",
-    "ts-node": "^10.9.1",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.0.4"
   }
 }
