--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "test": "test"
+    "test": "jest --config jest.config.js"
   },
   "author": "Sophie Zeissler",
   "dependencies": {
@@ -17,11 +17,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.25.3",
-    "nodemon": "^3.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.0.4"
   }
