--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "author": "Sophie Zeissler",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.3"
   },
